--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ lib/excel/poi-src-3.16-beta2-20170202.zip
 Admin CL Template_export.docx
 Admin LI Template_export.docx
 ~$min LI Template.docx
+.settings/org.eclipse.core.resources.prefs
+~$ster Resume Template-Revised.docx
